wasm: Refactor to use websocket.h API

This brings better use with threads and getting rid of bind

Change-Id: Ibf4bc128210fb8bbbb876d6244c48d3241c15194
Fixes: QTBUG-101682
Reviewed-by: Arno Rehn <a.rehn@menlosystems.com>
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
Reviewed-by: Jesus Fernandez <jsfdez@gmail.com>